# conjecture-hunters

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  GPU_SESSION_LOG.md  LICENSE  README.md  RUNBOOK_MI300X.md  SUBMISSION_CHECKLIST.md  conftest.py  pytest.ini  requirements.txt
benchmarks/: scorecard.py  scorecard_latest.json
buscador_rs/: Cargo.toml  README.md
buscador_rs/src/: amcs.rs  batch.rs  evaluators.rs  ga.rs  graph.rs  invariants.rs  lib.rs  main.rs  operators.rs  paritycheck.rs  rng.rs  seeds.rs  spectral.rs
buscador_rs/tests/: fixtures.rs  parity.rs  props.rs
calibracion/: amcs_baseline.py  construir_fixtures_b_c.py  extraer_fixture_amcs.py  ga_graphs.py  humo_ollama.py  programa_inicial.py
certificados/: README.md  certificar_cli.py  verify.py
common/: invariantes.py
configs/: calibracion.yaml  calibracion_ollama.yaml
dashboard/: README.md  build_dashboard.py  dashboard.html  dashboard_baked.html
deploy/: demo.sh  run_gpu.sh
docs/: PAQUETE_1_spec_calibracion.md  PAQUETE_2_cards_portafolio.md
entrega/: .gitignore  Conjecture_Hunters.pptx  build_deck.js
evaluators/: agx_l1_mu.py  toy_max_edges.py
finetune/: PLAN.md  cosechar.py  lora_train.py  requirements.txt
hallazgos/: .gitignore  registro.py  test_registro.py
mock_llm/: server.py
orquestador/: DISENO.md  README.md  archivo.py  bandit.py  certificar.py  enjambre.py  evaluar.py  grafos.py  mutador.py  orquestar.py  test_enjambre.py
parity/: bench_vs_python.py  build_corpus.py  parity_corpus.csv  refs.py  verify_ga_csv.py
prompts/: README.md  (+4 more)
(+61 files in other folders)
