[package]
name = "buscador_rs"
version = "0.1.0"
edition = "2024"

# Toolchain windows-gnu: se evitan deliberadamente crates que generan import
# libraries vía dlltool (windows-sys/getrandom) porque el MinGW self-contained
# de rustup no trae `as.exe`. RNG y parseo de args van hand-rolled (sin rand/clap).
[dependencies]
faer = { version = "0.24.4", default-features = false, features = ["linalg", "std"] }
rayon = "1.12.0"
csv = "1.4.0"

[profile.release]
opt-level = 3
